Codigo tá rodando, mas nas rotas de locais é preciso colocar o Bearer na frente do codigo, preciso verificar como arrumar isso para integrar com a API
